security_group.tf
resource "aws_security_group" "worker-group1-sg" {
  name_prefix = "worker-group1-sg"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/16"
    ]
  }
}
resource "aws_security_group" "worker-group2-sg" {
  name_prefix = "worker-group2-sg"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/16"
    ]
  }
}
